# python-cplusplus

./: .clang-format  .gitignore  .gitmodules  README.md  clean_build.py  prepare.py  run-test.bat  test.py
assets/shaders/NIS/: nis_scaler.comp  nis_sharpen.comp  (+1 more)
cuda/include/: common.h
src/: config.py  install_all.py
src/cmake-oidn/: CMakeLists.txt  README.md  bind.cpp  clean_and_restore.py  download_resources.py  install.py  oidn.py  oidn_denoiser.cpp  oidn_denoiser.h  setup.py  test.py  utils.cpp  utils.h
src/cmake-oidn/weights/: rt_hdr_alb_nrm_living-room.tza
src/cmake-optix/: CMakeLists.txt  bind.cpp  config.py  denoiser.cpp  denoiser.h  optix.py  optix_helper.h  setup.py  test.py
src/cmake_oidn/: CMakeLists.txt  clean_and_restore.py  download_resources.py  install.py  oidn.py  setup.py  test.py
src/cmake_optix/: bind.cpp  denoiser.cpp  install.py  optix.py  setup.py  test.py
src/python-cpp/: clean_and_restore.py  setup.py
src/python-cpp-cmake/: bind.cpp  clean_and_restore.py  install.py  test.py
src/python-cpp-setuptools/: bind.cpp  clean_and_restore.py  setup.py  test.py
src/python_cpp_cmake/: CMakeLists.txt  bind.cpp  test.py
src/python_cpp_setuptools/: bind.cpp  clean_and_restore.py
src/pytorch-cuda/: bind.cu  test.py
src/pytorch-cuda-jit/: test.py
src/pytorch-optix/: bind.cpp  config.py  denoiser.hpp  optix-helper.h  test.py
src/pytorch-optix-jit/: README.md  config.py  optix-helper.h  test.py
src/pytorch_cuda_jit/: test.py
src/pytorch_optix_jit/: README.md  denoiser.hpp  optix-helper.h  test.py
src/setup-optix/: config.py  denoiser.cpp  install.py  optix_helper.cpp  optix_helper.h  test.py
src/setup_NIS/: test.py
src/setup_oidn/: README.md  bind.cpp  clean_and_restore.py  config.py  install.py  oidn.py  oidn_denoiser.cpp  oidn_denoiser.h  setup.py  test.py
src/setup_optix/: bind.cpp  denoiser.cpp  denoiser.h  install.py  optix.py  setup.py  test.py
src/simple_denoise/: README.md  clean_and_restore.py  filter.py  install.py  prepare_shaders.py  pynis.py  setup.py  test.py
src/utils/: clean.py  download.py  images.py  my_queues.py  pfm.py  ui.py
(+11 files in other folders)
